--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "react-tutorial",
   "version": "1.0.0",
   "private": true,
+  "start": "set PORT=3001 && react-scripts start",
   "dependencies": {
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
-    "react-scripts": "^2.1.1"
+    "react-scripts": "^5.0.1"
   },
   "homepage": "https://taniarascia.github.io/react-tutorial",
   "scripts": {
@@ -17,7 +18,7 @@
     "deploy": "gh-pages -d build"
   },
   "devDependencies": {
-    "gh-pages": "^1.2.0"
+    "gh-pages": "^4.0.0"
   },
   "browserslist": [
     ">0.2%",
